<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/commonbg"
    tools:context="com.ank.chatribaghvyankteshtempleapp.ContactUsActivity">




    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"

                android:background="@drawable/gophuram"

                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/fab_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHeading"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/addressTitle"
                    android:textColor="@color/colorAccent"
                    android:textSize="24dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtAddressLable"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="Address :"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:textStyle="normal" />

                    <TextView
                        android:autoLink="map"
                        android:id="@+id/txtAddressValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/address"
                        android:textColor="#000"
                        android:textSize="17dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtCityLable"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="City :"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txtCityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Indore"
                        android:textColor="#000"
                        android:textSize="17dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="Phone :"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txtCountryCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/txtNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0731-2340987"
                        android:autoLink="phone"
                        android:textColor="#000"
                        android:textSize="17dp" />
                </LinearLayout>

             <!--   <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="Support :"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:textStyle="normal" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:text="Ankur Sharma\n+919009491777"
                        android:textColor="#000"
                        android:textSize="17dp" />
                </LinearLayout>-->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="Support Cont. :"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:textStyle="normal" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:text="Akhil Maheshwari \n+919009491777"
                        android:textColor="#000"
                        android:textSize="17dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="Tech Support :"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:textStyle="normal" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:text="Ankur Sharma \n+919098871605"
                        android:textColor="#000"
                        android:textSize="17dp" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="Facebook :"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:textStyle="normal" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="www.facebook.com/venkteshdevsthanam"
                        android:textColor="#000"
                        android:textSize="17dp" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/contactEmergency"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:maxLines="2"
                        android:singleLine="false"
                        android:text="Email :"
                        android:textColor="#000"
                        android:textSize="18dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txtContactEmergencyValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_weight="1"
                        android:text="@string/email"
                        android:textColor="#F3742F"
                        android:textSize="19dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
